fixed double scrollbar issue

--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -5,7 +5,7 @@
 
 .sidenav {
   width: min-content;
-  
+  position: fixed;
 }
 
 .sidenav .mat-toolbar {
@@ -19,6 +19,7 @@
 }
 
 #auth-div {
+  padding-top: 60px;
   text-align: center;
   display: flex;
   justify-content: center;
